tests/typing/errors/bad_term_arity/pb.expected
File "tests/typing/errors/bad_term_arity/pb.p", line 4, character 18-22:
4 | tff(test2, axiom, p(a) ).
                      ^^^^
Error Bad arity: expected 2 but got 1 arguments for function
      p : $i -> $i -> Prop
